[project]
name = "langgraph-automated-sdlc-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
